# chessbot

./: .gitignore  CMakeLists.txt  journal.md
include/: Board.hpp  Brain.hpp  Menu.hpp  Move.hpp  Program.hpp
scripts/: build.bat
src/: Board.cpp  Brain.cpp  Menu.cpp  Move.cpp  Program.cpp  main.cpp  neurons.txt
tests/: BoardKnightTest.cpp  BoardTests.cpp  MoveTests.cpp
